--- a/Server/App.config
+++ b/Server/App.config
@@ -3,4 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="PROJEKAT" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PROJEKAT;Integrated Security=True;"/>
+	</connectionStrings>
+	<appSettings>
+		<add key="ip" value="127.0.0.1"/>
+		<add key="port" value="9999"/>
+	</appSettings>
+
 </configuration>
