--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -59,18 +59,17 @@
     <Compile Include="Server.cs" />
     <Compile Include="SystemOperation\IzmeniNastavnikaSO.cs" />
     <Compile Include="SystemOperation\IzmeniRasporedSO.cs" />
-    <Compile Include="SystemOperation\KreirajNastavnikaSO.cs" />
-    <Compile Include="SystemOperation\KreirajPredavanjeSO.cs" />
-    <Compile Include="SystemOperation\KreirajPredmetSO.cs" />
-    <Compile Include="SystemOperation\KreirajRasporedSO.cs" />
+    <Compile Include="SystemOperation\ZapamtiNastavnikaSO.cs" />
+    <Compile Include="SystemOperation\ZapamtiPredavanjeSO.cs" />
+    <Compile Include="SystemOperation\ZapamtiPredmetSO.cs" />
+    <Compile Include="SystemOperation\ZapamtiRasporedSO.cs" />
     <Compile Include="SystemOperation\PrijaviSeSO.cs" />
     <Compile Include="SystemOperation\ObrisiNastavnikaSO.cs" />
     <Compile Include="SystemOperation\PretraziNastavnikeSO.cs" />
-    <Compile Include="SystemOperation\PretraziPredmeteSO.cs" />
+    <Compile Include="SystemOperation\PretraziRasporedeSO.cs" />
     <Compile Include="SystemOperation\SystemOperationBase.cs" />
     <Compile Include="SystemOperation\VratiPredmeteNastavnikaSO.cs" />
     <Compile Include="SystemOperation\VratiRasporedeSO.cs" />
-    <Compile Include="SystemOperation\VratiStavkeSO.cs" />
     <Compile Include="SystemOperation\VratiSveNastavnikeSO.cs" />
     <Compile Include="SystemOperation\VratiSvePredmeteSO.cs" />
     <Compile Include="SystemOperation\VratiSveUcioniceSO.cs" />
